updated with random number seed and adding public data access practice

--- a/00-Prerequisites/02-Preparation/Python-02-Python.ipynb
+++ b/00-Prerequisites/02-Preparation/Python-02-Python.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "<img src=\"logos/python-powered-h-140x182.png\">\n",
     "\n",
-    "This notebook is largely taken from a [tutorial](https://github.com/marcodeltutto/Python-Tutorial-SBN-Workshop) by Marco Del Tutto for an introductory workshop."
+    "This notebook is partially taken from a [tutorial](https://github.com/marcodeltutto/Python-Tutorial-SBN-Workshop) by Marco Del Tutto for an introductory workshop."
    ]
   },
   {
@@ -1393,7 +1393,7 @@
     {
      "data": {
       "text/plain": [
-       "<iterator at 0x7f59b8325ef0>"
+       "<iterator at 0x7f51e8fdc9e8>"
       ]
      },
      "execution_count": 44,
@@ -1501,8 +1501,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "721 µs ± 76.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "420 µs ± 8.62 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "440 µs ± 53.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "230 µs ± 25.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1701,8 +1701,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "464 µs ± 46.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "240 µs ± 29.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "328 µs ± 44.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "314 µs ± 30.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -1787,41 +1787,26 @@
     "There are two ways to do this: a module can be deifned within a single script OR within a directory with multiple scripts. Let's practice both cases.\n",
     "\n",
     "### A script as a module\n",
-    "Let's create a hyper simple Python script where we define a single integer attribute `age`. The script name is `DanielRatner.py`."
+    "You can import a script with `.py` suffix as a module. In this same directory, we prepared `DanielRatner.py`. It has a minimal content (unlike real Daniel who is full of features)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "! echo \"age=20\" > DanielRatner.py\n",
-    "! echo \"trend='machine learning initiative lead at SLAC'\" >> DanielRatner.py"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check this script now exists in this directory."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--. 1 kterao nu 56 Sep 21 22:02 DanielRatner.py\r\n"
+      "age=20\n",
+      "trend='machine learning initiative lead at SLAC'\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "! ls -lht DanielRatner.py"
+    "print(open('DanielRatner.py','r').read())"
    ]
   },
   {
@@ -1833,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1858,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1881,36 +1866,100 @@
     "### A directory as a module\n",
     "As you go down the path, you might end up defining 100 useful functions, and maybe group them into multiple python scripts, yet you may want to group them into one module. You can then define a whole directory containing multiple Python script as a module. \n",
     "\n",
-    "- RealDanielRatner\n",
-    "  - `__init__.py` ... signifies to Python that this directory should be treated as a module. Define what attributes to be available within the module.\n",
-    "  - `age.py` ... first module that contains Daniel's real age\n",
-    "  - `trend.py` ... second module that contains Daniel's real trend"
+    "We prepare another example to exercise importing a whole directory as a module.\n",
+    "The directory name is called `RealDanielRatner` and contains three python scripts.\n",
+    "\n",
+    "- `__init__.py` ... signifies to Python that this directory should be treated as a module. Define what attributes to be available within the module.\n",
+    "- `age.py` ... first module that contains Daniel's real age\n",
+    "- `favorite.py` ... second module that contains Daniel's favorite\n",
+    "- `trend.py` ... third module that contains Daniel's real trend\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__init__.py  __pycache__  age.py  favorite.py  trend.py\r\n"
+     ]
+    }
+   ],
    "source": [
-    "! mkdir -p RealDanielRatner\n",
-    "! echo \"age=40\" > RealDanielRatner/age.py\n",
-    "! echo \"trend='Loving, caring, and changing a diaper for his baby'\" > RealDanielRatner/trend.py\n",
-    "! echo \"favorite='ski conference'\" > RealDanielRatner/favorite.py\n",
-    "! echo \"from .age import age\" > RealDanielRatner/__init__.py\n",
-    "! echo \"from .trend import trend\" >> RealDanielRatner/__init__.py"
+    "! ls RealDanielRatner"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can import `RealDanielRatner`."
+    "The contents of `__init__.py` defines what should be available under `RealDanielRatner` module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "from .age import age\n",
+      "from .trend import trend\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(open('RealDanielRatner/__init__.py','r').read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rest of scripts contain just 1 line information about Daniel."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age=40\n",
+      "\n",
+      "favorite='ski conference'\n",
+      "\n",
+      "trend='Loving, caring, and changing a diaper for his baby'\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(open('RealDanielRatner/age.py','r').read())\n",
+    "print(open('RealDanielRatner/favorite.py','r').read())\n",
+    "print(open('RealDanielRatner/trend.py','r').read())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's import `RealDanielRatner`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +2036,7 @@
        "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2005,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2076,6 +2125,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Where are the module source?\n",
+    "So we just demonstrated that we could import `DanielRatner` from the `DanielRatner.py` in the same directory. But would the same work if `DanielRatner.py` is somewhere else? Where does `import` syntax looks up the location of the source modules?\n",
+    "\n",
+    "The answer is your current directory and a list of paths in `sys.path`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/app/larcv2/python',\n",
+       " '/app/root/lib',\n",
+       " '/usr/local/root/lib',\n",
+       " '/sdf/home/k/kterao/slacml-school/00-Prerequisites/02-Preparation',\n",
+       " '/usr/lib/python36.zip',\n",
+       " '/usr/lib/python3.6',\n",
+       " '/usr/lib/python3.6/lib-dynload',\n",
+       " '',\n",
+       " '/usr/local/lib/python3.6/dist-packages',\n",
+       " '/usr/lib/python3/dist-packages',\n",
+       " '/usr/local/lib/python3.6/dist-packages/IPython/extensions',\n",
+       " '/sdf/home/k/kterao/.ipython']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you wonder where an imported module came from, you can look up a `__file__` attribute where it is available. For instance,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3.6/platform.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(platform.__file__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... which tells you where the `platform` module we imporeted first in this notebook is defined."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusions\n",
     "\n",
     "And now, just for fun, let's import this."
@@ -2083,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
