--- a/00-Prerequisites/02-Preparation/Python-03-Numpy.ipynb
+++ b/00-Prerequisites/02-Preparation/Python-03-Numpy.ipynb
@@ -669,7 +669,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--. 1 ytl sf 730 Sep 19 10:33 erase.npz\r\n"
+      "-rw-r--r--. 1 kterao nu 730 Sep 22 07:18 erase.npz\r\n"
      ]
     }
    ],
@@ -954,8 +954,8 @@
      "output_type": "stream",
      "text": [
       "shape (100000,)\n",
-      "mean 0.49932489388078444 std 0.2887651539783446\n",
-      "min 6.239161303156493e-06 max 0.9999914910202937\n"
+      "mean 0.4992060564091323 std 0.28853539112360027\n",
+      "min 8.690002675448838e-06 max 0.9999946930217153\n"
      ]
     }
    ],
@@ -983,8 +983,8 @@
      "output_type": "stream",
      "text": [
       "shape (100,)\n",
-      "mean -0.04088791100459969 std 1.1313213183330606\n",
-      "min -3.287699338958283 max 2.7781088769095486\n"
+      "mean -0.09282435556151715 std 0.9691389464624793\n",
+      "min -2.749674147611024 max 2.308254344061201\n"
      ]
     }
    ],
@@ -993,6 +993,113 @@
     "print('shape',flat_random.shape)\n",
     "print('mean',flat_random.mean(),'std',flat_random.std())\n",
     "print('min',flat_random.min(),'max',flat_random.max())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random seed\n",
+    "A reproducible behavior is important for many things including debugging of your code. For a random number generator, this is controlled by what's called _seed_. If you set the random number seed, then the sampled values from a distribution is predictable even though they may appear random. Let's give a shot!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SEED=123\n",
+    "np.random.seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's sample 3 random values sampled from a normal distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.0856306   0.99734545  0.2829785 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.randn(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... and try again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.50629471 -0.57860025  1.65143654]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.randn(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OK, so I don't know what values come out if we try yet another time. However, if we re-set he seed, we can expect the exact same values to be drawn."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SEED=123\n",
+    "np.random.seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.0856306   0.99734545  0.2829785 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.random.randn(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Voila_ ! "
    ]
   },
   {
@@ -1008,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
