--- a/00-Prerequisites/02-Preparation/Python-05-PyTorch.ipynb
+++ b/00-Prerequisites/02-Preparation/Python-05-PyTorch.ipynb
@@ -17,7 +17,7 @@
     "In this notebook, we cover the basics part in each of topics above.\n",
     "\n",
     "<a href=\"datatype\"></a>\n",
-    "## Tensor data types in PyTorch\n",
+    "## 1. Tensor data types in PyTorch\n",
     "In `pytorch`, we use `torch.Tensor` object to represent data matrix. It is a lot like `numpy` array but not quite the same. `torch` provide APIs to easily convert data between `numpy` array and `torch.Tensor`. Let's play a little bit."
    ]
   },
@@ -25,11 +25,32 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x7fb680612530>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "SEED=123\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "... yep, that's how we set pytorch random number seed! (see Python-03-Numpy if you don't know about a seed)"
    ]
   },
   {
@@ -63,8 +84,8 @@
       "        [3., 4., 5.]])\n",
       "\n",
       "torch.randn:\n",
-      " tensor([[ 1.6513,  0.5392, -0.6704],\n",
-      "        [ 1.2471,  0.1067,  0.6401]])\n"
+      " tensor([[-0.1115,  0.1204, -0.3696],\n",
+      "        [-0.2404, -1.1969,  0.2093]])\n"
      ]
     }
    ],
@@ -437,9 +458,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[0, 1, 1],\n",
-       "        [1, 0, 1],\n",
-       "        [1, 1, 0]], dtype=torch.uint8)"
+       "tensor([[False,  True,  True],\n",
+       "        [ True, False,  True],\n",
+       "        [ True,  True, False]])"
       ]
      },
      "execution_count": 12,
@@ -517,7 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.7 ms ± 445 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "853 µs ± 33.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -542,7 +563,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55.5 µs ± 79.7 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "54.1 µs ± 8.2 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -569,7 +590,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "186 µs ± 2.6 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "190 µs ± 10.9 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -588,7 +609,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.16 ms ± 7.71 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "787 µs ± 117 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -610,7 +631,7 @@
    "metadata": {},
    "source": [
     "<a href=\"dataloader\"></a>\n",
-    "## Data loading tools in Pytorch\n",
+    "## 2. Data loading tools in Pytorch\n",
     "\n",
     "In Python-02-Python, we covered an iteratable class and how it could be useful to generalize a design of data access tools. Pytorch (and any other ML libraries out there) provides a generalized tool to interface such iteratable data instance called `DataLoader`. Desired capabilities of such tools include ability to choose random vs. ordered subset in data, parallelized workers to simultaneously prepare multiple batch data, etc..\n",
     "\n",
@@ -672,16 +693,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch entry 0 ... batch data tensor([29, 73, 22, 33, 54, 36, 82, 88, 75, 81])\n",
-      "Batch entry 1 ... batch data tensor([41, 78, 17, 87, 65, 92, 45, 15,  4, 42])\n",
-      "Batch entry 2 ... batch data tensor([13, 28, 80, 44, 46, 21, 38, 49, 50, 32])\n",
-      "Batch entry 3 ... batch data tensor([ 8, 26,  9,  3, 64, 68, 53, 58, 59, 57])\n",
-      "Batch entry 4 ... batch data tensor([90, 70, 62, 86, 47, 24, 72, 63, 30, 96])\n",
-      "Batch entry 5 ... batch data tensor([74, 31, 27, 79, 51, 10, 40, 48, 66, 11])\n",
-      "Batch entry 6 ... batch data tensor([85, 34, 18, 52, 23, 84,  1, 83, 16, 61])\n",
-      "Batch entry 7 ... batch data tensor([67, 99,  0, 93, 77, 19, 71,  2, 60, 39])\n",
-      "Batch entry 8 ... batch data tensor([35, 55, 69, 25, 94,  6, 14, 20,  7, 89])\n",
-      "Batch entry 9 ... batch data tensor([91, 76, 97, 56, 95, 12, 37,  5, 98, 43])\n"
+      "Batch entry 0 ... batch data tensor([12, 22, 48, 77,  3, 65, 26, 47, 99, 43])\n",
+      "Batch entry 1 ... batch data tensor([89, 90, 25, 61, 20, 41, 52, 27,  0, 35])\n",
+      "Batch entry 2 ... batch data tensor([54, 67, 45, 78, 72,  1, 14, 83, 44, 80])\n",
+      "Batch entry 3 ... batch data tensor([ 9, 98, 24, 95, 70, 23, 69, 75, 29,  2])\n",
+      "Batch entry 4 ... batch data tensor([91, 55,  5, 71, 68, 38, 31, 92, 39,  4])\n",
+      "Batch entry 5 ... batch data tensor([74, 17, 94, 62, 79, 49,  7, 76, 15, 28])\n",
+      "Batch entry 6 ... batch data tensor([42, 10, 59, 86, 50, 16, 97, 57, 84, 63])\n",
+      "Batch entry 7 ... batch data tensor([96, 66, 18, 46, 13, 88, 40, 53, 33, 81])\n",
+      "Batch entry 8 ... batch data tensor([85, 36, 87, 58, 37, 11, 30, 73, 32, 93])\n",
+      "Batch entry 9 ... batch data tensor([21, 19, 34, 82,  8, 60, 56,  6, 51, 64])\n"
      ]
     }
    ],
@@ -739,9 +760,9 @@
    "metadata": {},
    "source": [
     "<a href=\"graph\"></a>\n",
-    "## Computation graph\n",
+    "## 3. Computation graph\n",
     "\n",
-    "The last point to cover is a computation graph using modularized mathematical operations. \n",
+    "The last point to cover is how to chain modularized mathematical operations. \n",
     "\n",
     "To get started, let's introduce a few, well used mathematical operations in pytorch.\n",
     "\n",
@@ -760,11 +781,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[-0.9492,  0.4500, -0.0772,  0.3708, -0.6744],\n",
-       "         [ 0.1369, -0.2812, -1.2947, -1.0273,  0.5935],\n",
-       "         [ 1.6162,  0.4125,  0.1124,  1.5612, -1.2947],\n",
-       "         [-0.5881,  1.0536, -2.1661,  0.4418, -0.2163],\n",
-       "         [ 1.0729,  1.5724, -1.5158, -0.9608,  0.9038]]])"
+       "tensor([[[-0.5073, -0.6062,  0.4771,  0.7203, -0.0215],\n",
+       "         [ 1.0731, -0.1408, -0.5394, -1.3237, -0.2589],\n",
+       "         [ 1.3113, -0.0360,  0.2118, -0.0086,  1.8576],\n",
+       "         [ 2.1321, -0.5056,  1.6921, -1.0944, -1.0197],\n",
+       "         [-0.5399,  1.2117, -0.8632,  1.3337,  0.0771]]])"
       ]
      },
      "execution_count": 23,
@@ -793,11 +814,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.0000, 0.4500, 0.0000, 0.3708, 0.0000],\n",
-       "         [0.1369, 0.0000, 0.0000, 0.0000, 0.5935],\n",
-       "         [1.6162, 0.4125, 0.1124, 1.5612, 0.0000],\n",
-       "         [0.0000, 1.0536, 0.0000, 0.4418, 0.0000],\n",
-       "         [1.0729, 1.5724, 0.0000, 0.0000, 0.9038]]])"
+       "tensor([[[0.0000, 0.0000, 0.4771, 0.7203, 0.0000],\n",
+       "         [1.0731, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "         [1.3113, 0.0000, 0.2118, 0.0000, 1.8576],\n",
+       "         [2.1321, 0.0000, 1.6921, 0.0000, 0.0000],\n",
+       "         [0.0000, 1.2117, 0.0000, 1.3337, 0.0771]]])"
       ]
      },
      "execution_count": 24,
@@ -825,11 +846,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.0800, 0.3241, 0.1913, 0.2994, 0.1053],\n",
-       "         [0.2640, 0.1738, 0.0631, 0.0824, 0.4168],\n",
-       "         [0.3963, 0.1189, 0.0881, 0.3751, 0.0216],\n",
-       "         [0.0941, 0.4862, 0.0194, 0.2637, 0.1366],\n",
-       "         [0.2704, 0.4456, 0.0203, 0.0354, 0.2283]]])"
+       "tensor([[[0.1039, 0.0942, 0.2782, 0.3548, 0.1690],\n",
+       "         [0.5401, 0.1604, 0.1077, 0.0492, 0.1426],\n",
+       "         [0.2788, 0.0725, 0.0928, 0.0745, 0.4814],\n",
+       "         [0.5561, 0.0398, 0.3582, 0.0221, 0.0238],\n",
+       "         [0.0631, 0.3636, 0.0457, 0.4108, 0.1169]]])"
       ]
      },
      "execution_count": 25,
@@ -857,11 +878,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.4500],\n",
-       "         [0.5935],\n",
-       "         [1.6162],\n",
-       "         [1.0536],\n",
-       "         [1.5724]]])"
+       "tensor([[[0.7203],\n",
+       "         [1.0731],\n",
+       "         [1.8576],\n",
+       "         [2.1321],\n",
+       "         [1.3337]]])"
       ]
      },
      "execution_count": 26,
@@ -889,11 +910,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.2606],\n",
-       "         [0.3039],\n",
-       "         [0.3749],\n",
-       "         [0.3863],\n",
-       "         [0.3946]]])"
+       "tensor([[[0.3083],\n",
+       "         [0.4223],\n",
+       "         [0.4798],\n",
+       "         [0.5000],\n",
+       "         [0.3708]]])"
       ]
      },
      "execution_count": 27,
@@ -920,11 +941,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[0.2606],\n",
-       "         [0.3039],\n",
-       "         [0.3749],\n",
-       "         [0.3863],\n",
-       "         [0.3946]]])"
+       "tensor([[[0.3083],\n",
+       "         [0.4223],\n",
+       "         [0.4798],\n",
+       "         [0.5000],\n",
+       "         [0.3708]]])"
       ]
      },
      "execution_count": 28,
@@ -977,11 +998,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[1.2606],\n",
-       "         [1.3039],\n",
-       "         [1.3749],\n",
-       "         [1.3863],\n",
-       "         [1.3946]]])"
+       "tensor([[[1.3083],\n",
+       "         [1.4223],\n",
+       "         [1.4798],\n",
+       "         [1.5000],\n",
+       "         [1.3708]]])"
       ]
      },
      "execution_count": 30,
@@ -1030,11 +1051,11 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[1.2606],\n",
-       "         [1.3039],\n",
-       "         [1.3749],\n",
-       "         [1.3863],\n",
-       "         [1.3946]]])"
+       "tensor([[[1.3083],\n",
+       "         [1.4223],\n",
+       "         [1.4798],\n",
+       "         [1.5000],\n",
+       "         [1.3708]]])"
       ]
      },
      "execution_count": 32,
