wrong notebooks pushed. sigh...

--- a/IntroNN/Pytorch-01-LinearModels.ipynb
+++ b/IntroNN/Pytorch-01-LinearModels.ipynb
@@ -6,11 +6,29 @@
    "source": [
     "# Logistic regression + PyTorch\n",
     "\n",
+    "You can open this notebook either within a supported container or Google colaboratory [here](https://colab.research.google.com/github/slaclab/slacml-school/blob/master/IntroNN/Pytorch-01-LinearModels.ipynb).\n",
+    "\n",
     "In this notebook, we will introduce ourself to PyTorch machine learning framework by implement a linear regression model. Then we expand into a model with multiple linear transformation in the form of a simplest neural network. We exercise using a non-linear activation function and how that can impact the solution found by a model. \n",
     "\n",
     "### What we cover\n",
     "1. Logistic regression with a linear model using PyTorch\n",
-    "2. Logistic regression with two layers perceptron\n"
+    "2. Logistic regression with two layers perceptron\n",
+    "\n",
+    "You may have to install `Tensorboard` (needed if you are running a container w/o Tensorboard) and `plotly>5.3` (needed if you are on google Colab). If so, please execute the following comment cell as a code!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "! pip3 install --user tensorboard \"plotly>5.3\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start with a regular import"
    ]
   },
   {
@@ -390,7 +408,7 @@
     "import time\n",
     "\n",
     "# Create a handler to store the log for Tensorboard\n",
-    "writer = SummaryWriter(log_dir='aho')\n",
+    "writer = SummaryWriter(log_dir='tako')\n",
     "\n",
     "for i in range(5):\n",
     "    t0=time.time()\n",
@@ -418,7 +436,7 @@
    "source": [
     "%load_ext tensorboard\n",
     "\n",
-    "%tensorboard --logdir aho"
+    "%tensorboard --logdir tako"
    ]
   },
   {
@@ -595,7 +613,6 @@
     "        margin=dict(l=20,r=20,b=20,t=20),\n",
     "        width=600,height=400,\n",
     "        xaxis_title='p0',yaxis_title='p1',\n",
-    "        legend_title='Data'\n",
     "    )\n",
     "    fig.show()\n",
     "    \n",
@@ -651,7 +668,6 @@
     "        margin=dict(l=20,r=20,b=20,t=20),\n",
     "        width=600,height=400,\n",
     "        xaxis_title='w0',yaxis_title='w1',\n",
-    "        legend_title='Data'\n",
     "    )\n",
     "    fig.show()\n",
     "    \n",
@@ -825,8 +841,8 @@
     "\n",
     "1. Design a model with `torch.nn.LeakyReLU` inserted between two linear layers\n",
     "2. Train the model with `Adam` and 10000 iterations\n",
-    "3. Visualize the input data and two lines for the first layer\n",
-    "4. Visualize the input data and a line for the second layer\n"
+    "3. Visualize the input data and two lines from the first layer\n",
+    "4. Visualize the input data and a line from the second layer\n"
    ]
   },
   {
