--- a/IntroNN/Pytorch-02-MLP.ipynb
+++ b/IntroNN/Pytorch-02-MLP.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# MNIST + MLP\n",
     "\n",
+    "You can open this notebook either within a supported container or Google colaboratory [here](https://colab.research.google.com/github/slaclab/slacml-school/blob/master/IntroNN/Pytorch-02-MLP.ipynb).\n",
+    "\n",
     "In this notebook, we design and train a Multi-Layer Perceptrons (MLP) for hand-written digit classification task. We use MNIST dataset that contains 28x28 pixel images of a hand-written digit (0 to 9, so 10 classification targets). \n",
     "\n",
     "## Goals\n",
@@ -30,6 +32,8 @@
     "mpl.rcParams['axes.grid'] = True\n",
     "\n",
     "import torch\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "torch.device(device)\n",
     "import numpy as np\n",
     "SEED=12345\n",
     "_=np.random.seed(SEED)\n",
@@ -381,18 +385,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_torch(data_loader, model, num_iterations=100, lr=0.001, optimizer='SGD', gpu=False):\n",
+    "from ipywidgets import IntProgress\n",
+    "from IPython.display import display\n",
+    "\n",
+    "def train_torch(data_loader, model, num_iterations=100, lr=0.001, optimizer='SGD', device=None):\n",
     "    # Create a Binary-Cross-Entropy (BCE) loss module\n",
     "    criterion = torch.nn.CrossEntropyLoss()\n",
     "    # Create an optimizer\n",
     "    optimizer = getattr(torch.optim,optimizer)(model.parameters(),lr=lr)\n",
+    "    # Progress bar for impatient me\n",
+    "    f = IntProgress(min=0,max=int(num_iterations/100),bar_style='info')\n",
+    "    display(f)\n",
     "    # Now we run the training!\n",
     "    loss_v=[]\n",
     "    while num_iterations > 0:\n",
     "        for data,label in data_loader:\n",
     "            \n",
-    "            if gpu:\n",
-    "                data,label = data.cuda(),label.cuda()\n",
+    "            if device:\n",
+    "                data,label = data.to(device),label.to(device)\n",
     "            # Prediction\n",
     "            prediction = model(data)\n",
     "            # Compute loss\n",
@@ -403,6 +413,9 @@
     "            optimizer.step()\n",
     "            # Record loss\n",
     "            loss_v.append(loss.item())\n",
+    "            # Update the progress bar\n",
+    "            if num_iterations%100 == 0:\n",
+    "                f.value += 1\n",
     "            # Brake if we consumed all iteration counts\n",
     "            num_iterations -= 1\n",
     "            if num_iterations < 1:\n",
@@ -541,7 +554,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_test(model,loader,gpu=False):\n",
+    "def run_test(model,loader,device=None):\n",
     "\n",
     "    from scipy.special import softmax\n",
     "\n",
@@ -552,8 +565,8 @@
     "    with torch.set_grad_enabled(False):\n",
     "        idx=0\n",
     "        for data,label in loader:\n",
-    "            if gpu:\n",
-    "                data,label = data.cuda(), label.cuda()\n",
+    "            if device:\n",
+    "                data,label = data.to(device), label.to(device)\n",
     "            prediction   = model(data).cpu().numpy()\n",
     "            prediction_v.append ( np.argmax(prediction,axis=1)    )\n",
     "            label_v.append      ( label.cpu().numpy().reshape(-1) )\n",
