--- a/IntroNN/Pytorch-00-Tensors.ipynb
+++ b/IntroNN/Pytorch-00-Tensors.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Pytorch\n",
     "\n",
+    "You can open this notebook either within a supported container or Google colaboratory [here](https://colab.research.google.com/github/slaclab/slacml-school/blob/master/IntroNN/Pytorch-00-Tensors.ipynb).\n",
+    "\n",
     "[Pytorch](https://pytorch.org/) is one of open-source, modern deep learning libraries out there and what we will use in this workshop. Other popular libraries include [Tensorflow](https://www.tensorflow.org/), [Keras](https://keras.io), [MXNet](https://mxnet.apache.org), [Spark ML](https://spark.apache.org/mllib/), etc. ...\n",
     "\n",
     "All of those libraries works very similar. If you are new, probably any of Pytorch/Keras/Tensorflow would work well with lots of guidance/examples/discussion-forums online! Common things you have to learn include:\n",
@@ -29,7 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f37bec98a10>"
+       "<torch._C.Generator at 0x7f35c785fa50>"
       ]
      },
      "execution_count": 1,
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +380,7 @@
        "torch.Size([1, 9])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +407,7 @@
        "torch.Size([3, 3])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +436,7 @@
        "tensor([1., 0., 0.])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +465,7 @@
        "        [ True,  True, False]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +493,7 @@
        "tensor([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +540,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "853 µs ± 33.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "634 µs ± 16.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -563,7 +565,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "54.1 µs ± 8.2 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "57.6 µs ± 601 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -590,7 +592,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "190 µs ± 10.9 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "84.8 µs ± 5.17 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -609,7 +611,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "787 µs ± 117 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.03 ms ± 92.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
