All notebooks for today

--- a/IntroNN/Pytorch-02-MLP.ipynb
+++ b/IntroNN/Pytorch-02-MLP.ipynb
@@ -376,7 +376,7 @@
    "source": [
     "\n",
     "### 3.2 Train loop function\n",
-    "Next, let's define a train loop function. This is also mostly copy-and-paste from the previous notebook. A small modification include an option to specify gpu v.s. cpu mode."
+    "Next, let's define a train and test loop function. This is pretty much copied from the last notebook."
    ]
   },
   {
@@ -387,41 +387,42 @@
    "source": [
     "from ipywidgets import IntProgress\n",
     "from IPython.display import display\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "import time\n",
     "\n",
-    "def train_torch(data_loader, model, num_iterations=100, lr=0.001, optimizer='SGD', device=None):\n",
-    "    # Create a Binary-Cross-Entropy (BCE) loss module\n",
+    "def run_train(model, loader,  \n",
+    "              num_iterations=100, log_dir='log',\n",
+    "              lr=0.001, optimizer='SGD', device=None):\n",
+    "    print(\"\\nTraining...\")\n",
+    "    tstart = time.time()\n",
+    "    if log_dir:\n",
+    "        writer = SummaryWriter(log_dir=log_dir)\n",
     "    criterion = torch.nn.CrossEntropyLoss()\n",
-    "    # Create an optimizer\n",
     "    optimizer = getattr(torch.optim,optimizer)(model.parameters(),lr=lr)\n",
-    "    # Progress bar for impatient me\n",
     "    f = IntProgress(min=0,max=int(num_iterations/100),bar_style='info')\n",
     "    display(f)\n",
-    "    # Now we run the training!\n",
-    "    loss_v=[]\n",
-    "    while num_iterations > 0:\n",
-    "        for data,label in data_loader:\n",
+    "    \n",
+    "    iteration = 0\n",
+    "    while iteration < num_iterations:\n",
+    "        for data,label in loader:\n",
     "            \n",
     "            if device:\n",
     "                data,label = data.to(device),label.to(device)\n",
-    "            # Prediction\n",
-    "            prediction = model(data)\n",
-    "            # Compute loss\n",
-    "            loss = criterion(prediction, label)\n",
-    "            # Update weights\n",
+    "\n",
+    "            loss = criterion(model(data), label)\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            # Record loss\n",
-    "            loss_v.append(loss.item())\n",
-    "            # Update the progress bar\n",
-    "            if num_iterations%100 == 0:\n",
+    "            \n",
+    "            if log_dir: \n",
+    "                writer.add_scalar('loss/train', loss.item(), iteration)\n",
+    "            if iteration%100 == 0:\n",
     "                f.value += 1\n",
     "            # Brake if we consumed all iteration counts\n",
-    "            num_iterations -= 1\n",
-    "            if num_iterations < 1:\n",
+    "            iteration += 1\n",
+    "            if iteration >= num_iterations:\n",
     "                break\n",
-    "        \n",
-    "    return np.array(loss_v)"
+    "    print('done',time.time()-tstart,'[s]')\n"
    ]
   },
   {
@@ -439,18 +440,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_a = MLP()\n",
+    "model_a = MLP(16)\n",
     "\n",
-    "loss = train_torch(loader, model_a, 4000, optimizer='Adam')\n",
-    "\n",
-    "plt.plot(loss)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "That is a pretty large fluctuation! Often it's useful to look at a moothed loss curve by taking an average value with the neighbor data points. Let's try this."
+    "run_train(model_a, loader, 4000, log_dir='mnist_mlp/filter16', optimizer='Adam')"
    ]
   },
   {
@@ -459,22 +451,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute moving average\n",
-    "def moving_average(a, n=3) :\n",
-    "    ret = np.cumsum(a, dtype=float)\n",
-    "    ret[n:] = ret[n:] - ret[:-n]\n",
-    "    return ret[n - 1:] / n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(loss)\n",
-    "plt.plot(moving_average(loss,20))\n",
-    "print('last 20 average',np.mean(loss[-20:]))"
+    "%load_ext tensorboard\n",
+    "\n",
+    "%tensorboard --logdir mnist_mlp"
    ]
   },
   {
@@ -483,9 +462,7 @@
    "source": [
     "### 3.3 Exercise A\n",
     "\n",
-    "1. Repeat the same training for `model_b` = `MLP` with 32 filters. \n",
-    "2. Plot the loss curve with 20 neighbor-points average.\n",
-    "3. Compare the los value of the last 20 steps against the `model_a`. "
+    "Repeat the same training for `model_b` = `MLP` with 32 filters. "
    ]
   },
   {
@@ -501,7 +478,7 @@
    "source": [
     "### 3.4 Exercise B\n",
     "\n",
-    "1. Repeat the exercise 1 and measure how long it takes in wall-time.\n",
+    "1. Repeat the exercise A and measure how long it takes in wall-time.\n",
     "2. Repeat again, but this time with GPU enabled, and measure how long it takes.\n",
     "\n",
     "You probably see a very similar amount of time taken for both cases. This is because parallelizable fraction of computation is not dominating in the overall computing time (and especially when most time may be taken to copy data onto gpu)."
@@ -556,24 +533,19 @@
    "source": [
     "def run_test(model,loader,device=None):\n",
     "\n",
-    "    from scipy.special import softmax\n",
-    "\n",
-    "    prediction_v = []\n",
-    "    label_v      = []\n",
-    "    softmax_v    = []\n",
+    "    label_v, softmax_v = [],[]\n",
+    "    softmax   = torch.nn.Softmax(dim=1)\n",
+    "    f = IntProgress(min=0,max=int(len(loader)),bar_style='info')\n",
+    "    display(f)\n",
     "    \n",
     "    with torch.set_grad_enabled(False):\n",
-    "        idx=0\n",
     "        for data,label in loader:\n",
     "            if device:\n",
     "                data,label = data.to(device), label.to(device)\n",
-    "            prediction   = model(data).cpu().numpy()\n",
-    "            prediction_v.append ( np.argmax(prediction,axis=1)    )\n",
-    "            label_v.append      ( label.cpu().numpy().reshape(-1) )\n",
-    "            s = softmax(prediction,axis=1)\n",
-    "            softmax_v.append    (s)\n",
-    "            idx +=1\n",
-    "    return np.concatenate(prediction_v), np.concatenate(label_v), np.concatenate(softmax_v)"
+    "            label_v.append  ( label.detach().reshape(-1)   )\n",
+    "            softmax_v.append( softmax(model(data)).detach())\n",
+    "            f.value += 1\n",
+    "    return torch.concat(label_v).cpu().numpy(), torch.concat(softmax_v).cpu().numpy()\n"
    ]
   },
   {
