--- a/IntroNN/Pytorch-00-Tensors.ipynb
+++ b/IntroNN/Pytorch-00-Tensors.ipynb
@@ -31,7 +31,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f35c785fa50>"
+       "<torch._C.Generator at 0x7f0f3c07da30>"
       ]
      },
      "execution_count": 1,
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "torch.Size([1, 9])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "torch.Size([3, 3])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "tensor([1., 0., 0.])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "        [ True,  True, False]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "tensor([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,14 +514,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create 1000x1000 matrix\n",
     "data_np=np.zeros([1000,1000],dtype=np.float32)\n",
-    "data_cpu = torch.Tensor(data_np).cpu()\n",
-    "data_gpu = torch.Tensor(data_np).cuda()"
+    "data_cpu = torch.Tensor(data_np).to('cpu')\n",
+    "data_gpu = torch.Tensor(data_np).to('cuda')"
    ]
   },
   {
@@ -533,14 +533,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "634 µs ± 16.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.12 ms ± 34 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -558,14 +558,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "57.6 µs ± 601 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "74.2 µs ± 2.37 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -585,14 +585,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "84.8 µs ± 5.17 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "398 µs ± 31.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -604,14 +604,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.03 ms ± 92.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.54 ms ± 10.2 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
